@@ -1404,7 +1404,7 @@ servers set. The default for fast\-server\-permil is 0.
 .B fast\-server\-num: \fI<number>
 Set the number of servers that should be used for fast server selection. Only
 use the fastest specified number of servers with the fast\-server\-permil
-option, that turns this on or off. The default is to use the fastest 4 servers.
+option, that turns this on or off. The default is to use the fastest 3 servers.
 .SS "Remote Control Options"
 In the
 .B remote\-control:
